--- a/bloom-and-vine/src/index.css
+++ b/bloom-and-vine/src/index.css
@@ -14,9 +14,12 @@ code {
 
 html, body, #full, #someid {
   height: 100%;
+  width: 100vw;
+  margin: 0;
+  overflow-x: hidden;
 }
 
 #header {
   float: left;
-  width: 100%;
+
 }
